kustomize/overlays/staging/item-flow/pixta-pfm/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfm-svc
spec:
  selector:
    app: pfm
    stage: staging
